--- a/index.html
+++ b/index.html
@@ -19,34 +19,69 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-body aside-derecho">
+        <div class="first-div-container mb-5" >
+          <img src="images/aside2/w7zwupybdfccamc6nj3s.png" alt="publicity image" width="100%" class="rounded">
+          <div class="border p-3">
+            <strong class="stories">Stories (35)</strong>
+          </div>
+          <div class="border-bottom p-3 myAnchorsDiv"> 
+            <a class="myAnchors" href="">
+              Announcing the DigitalOcean App Platform Hackathon on DEV!
+            </a>             
+          </div>
+          <div class="border-bottom p-3 myAnchorsDiv">
+            <a class="myAnchors" href="">
+              Speech-to-text in browser
+            </a>
+          </div>
+          <div class="border-bottom p-3 myAnchorsDiv">
+           <a class="myAnchors" href="">
+            WebDiary.io - an entry to Digital Ocean Hackathon
+           </a> 
+          </div>
+          <div class="border-bottom p-3 myAnchorsDiv">
+            <a class="myAnchors" href="">
+              Dev.to View Count Day 1: Planning
+            </a>
+          </div>
+          <div class="border-bottom p-3 myAnchorsDiv">
+            <a class="myAnchors" href="">
+              My Personal Site/Portfolio - DigitalOcean App Platform 
+            </a>
+          </div>
+          <div class="border-bottom p-3 myAsideButtons">
+            <button type="button" class="btn btn-primary btn-lg btn-block">Submit your project</button>
+            <button type="button" class="btn btn-lg btn-block seePostButton">See all posts</button>
+          </div>
+        </div>
         <div class="card first-section rounded mb-3">
           <ul class="list-group list-group-news rounded">
               <h4 class="p-3"><strong> #news</strong></h4>
-              <a href="#" class="listings1 p-3 border-top">PE offers limited scholarships from 1k to 4k for diversity and financial hardship<span>education</span><br><p class="comments mt-2"> 36 comments</p></a>
-              <a href="#" class="listings1 p-3 border-top">Learn more than just ´coding´ Learn the entire design process:<span>education</span><br><p class="comments mt-2"> 15 comments</p></a>
-              <a href="#" class="listings1 p-3 border-top">FCAL - Open source cross plaform calculator for programmers<span>collabs</span><br><p class="comments mt-2"> 12 comments</p></a>
-              <a href="#" class="listings1 p-3 border-top">QA Platform Engineer<span>jobs</span><br><p class="comments mt-2"> 10 comments</p></a>
-              <a href="#" class="listings1 p-3 border-top">💡Free Clear Explanations of Fundamental Concepts in Software - in plain english with hand-drawn illustrations<span>education</span><br><p class="comments mt-2">6 comments</p></a>
+              <a href="#" class="listings1 p-3 border-top text-reset">PE offers limited scholarships from 1k to 4k for diversity and financial hardship<span>education</span><br><p class="comments mt-2"> 36 comments</p></a>
+              <a href="#" class="listings1 p-3 border-top text-reset">Learn more than just ´coding´ Learn the entire design process:<span>education</span><br><p class="comments mt-2"> 15 comments</p></a>
+              <a href="#" class="listings1 p-3 border-top text-reset">FCAL - Open source cross plaform calculator for programmers<span>collabs</span><br><p class="comments mt-2"> 12 comments</p></a>
+              <a href="#" class="listings1 p-3 border-top text-reset">QA Platform Engineer<span>jobs</span><br><p class="comments mt-2"> 10 comments</p></a>
+              <a href="#" class="listings1 p-3 border-top text-reset">💡Free Clear Explanations of Fundamental Concepts in Software - in plain english with hand-drawn illustrations<span>education</span><br><p class="comments mt-2">6 comments</p></a>
           </ul>
       </div>
       <div class="card mt-5 first-section rounded mb-3">
           <ul class="list-group list-group-news rounded">
-              <h4 class="p-3"><strong> #news</strong></h4>
-              <a href="#" class="listings1 p-3 border-top">PE offers limited scholarships from 1k to 4k for diversity and financial hardship<span>education</span><br><p class="comments mt-2"> 36 comments</p></a>
-              <a href="#" class="listings1 p-3 border-top">Learn more than just ´coding´ Learn the entire design process:<span>education</span><br><p class="comments mt-2"> 15 comments</p></a>
-              <a href="#" class="listings1 p-3 border-top">FCAL - Open source cross plaform calculator for programmers<span>collabs</span><br><p class="comments mt-2"> 12 comments</p></a>
-              <a href="#" class="listings1 p-3 border-top">QA Platform Engineer<span>jobs</span><br><p class="comments mt-2"> 10 comments</p></a>
-              <a href="#" class="listings1 p-3 border-top">💡Free Clear Explanations of Fundamental Concepts in Software - in plain english with hand-drawn illustrations<span>education</span><br><p class="comments mt-2">6 comments</p></a>
+              <h4 class="p-3"><strong> #listings</strong></h4>
+              <a href="#" class="listings1 p-3 border-top text-reset">PE offers limited scholarships from 1k to 4k for diversity and financial hardship<span>education</span><br><p class="comments mt-2"> 36 comments</p></a>
+              <a href="#" class="listings1 p-3 border-top text-reset">Learn more than just ´coding´ Learn the entire design process:<span>education</span><br><p class="comments mt-2"> 15 comments</p></a>
+              <a href="#" class="listings1 p-3 border-top text-reset">FCAL - Open source cross plaform calculator for programmers<span>collabs</span><br><p class="comments mt-2"> 12 comments</p></a>
+              <a href="#" class="listings1 p-3 border-top text-reset">QA Platform Engineer<span>jobs</span><br><p class="comments mt-2"> 10 comments</p></a>
+              <a href="#" class="listings1 p-3 border-top text-reset">💡Free Clear Explanations of Fundamental Concepts in Software - in plain english with hand-drawn illustrations<span>education</span><br><p class="comments mt-2">6 comments</p></a>
           </ul>
       </div>
       <div class="card mt-5 first-section rounded mb-3">
           <ul class="list-group list-group-news rounded">
-              <h4 class="p-3"><strong> #news</strong></h4>
-              <a href="#" class="listings1 p-3 border-top">PE offers limited scholarships from 1k to 4k for diversity and financial hardship<span>education</span><br><p class="comments mt-2"> 36 comments</p></a>
-              <a href="#" class="listings1 p-3 border-top">Learn more than just ´coding´ Learn the entire design process:<span>education</span><br><p class="comments mt-2"> 15 comments</p></a>
-              <a href="#" class="listings1 p-3 border-top">FCAL - Open source cross plaform calculator for programmers<span>collabs</span><br><p class="comments mt-2"> 12 comments</p></a>
-              <a href="#" class="listings1 p-3 border-top">QA Platform Engineer<span>jobs</span><br><p class="comments mt-2"> 10 comments</p></a>
-              <a href="#" class="listings1 p-3 border-top">💡Free Clear Explanations of Fundamental Concepts in Software - in plain english with hand-drawn illustrations<span>education</span><br><p class="comments mt-2">6 comments</p></a>
+              <h4 class="p-3"><strong> #help</strong></h4>
+              <a href="#" class="listings1 p-3 border-top text-reset">PE offers limited scholarships from 1k to 4k for diversity and financial hardship<span>education</span><br><p class="comments mt-2"> 36 comments</p></a>
+              <a href="#" class="listings1 p-3 border-top text-reset">Learn more than just ´coding´ Learn the entire design process:<span>education</span><br><p class="comments mt-2"> 15 comments</p></a>
+              <a href="#" class="listings1 p-3 border-top text-reset">FCAL - Open source cross plaform calculator for programmers<span>collabs</span><br><p class="comments mt-2"> 12 comments</p></a>
+              <a href="#" class="listings1 p-3 border-top text-reset">QA Platform Engineer<span>jobs</span><br><p class="comments mt-2"> 10 comments</p></a>
+              <a href="#" class="listings1 p-3 border-top text-reset">💡Free Clear Explanations of Fundamental Concepts in Software - in plain english with hand-drawn illustrations<span>education</span><br><p class="comments mt-2">6 comments</p></a>
           </ul>
       </div>
       </div>
@@ -452,34 +487,69 @@
           </div>
           <div class="d-none d-lg-block col-lg-3 aside-derecho">
             <!-- Aside Derecho -->
+            <div class="first-div-container mb-5" style="width: 18rem;">
+              <img src="images/aside2/w7zwupybdfccamc6nj3s.png" alt="publicity image" style="width: 18rem;" class="rounded">
+              <div class="border p-3">
+                <strong class="stories">Stories (35)</strong>
+              </div>
+              <div class="border-bottom p-3 myAnchorsDiv"> 
+                <a class="myAnchors" href="">
+                  Announcing the DigitalOcean App Platform Hackathon on DEV!
+                </a>             
+              </div>
+              <div class="border-bottom p-3 myAnchorsDiv">
+                <a class="myAnchors" href="">
+                  Speech-to-text in browser
+                </a>
+              </div>
+              <div class="border-bottom p-3 myAnchorsDiv">
+               <a class="myAnchors" href="">
+                WebDiary.io - an entry to Digital Ocean Hackathon
+               </a> 
+              </div>
+              <div class="border-bottom p-3 myAnchorsDiv">
+                <a class="myAnchors" href="">
+                  Dev.to View Count Day 1: Planning
+                </a>
+              </div>
+              <div class="border-bottom p-3 myAnchorsDiv">
+                <a class="myAnchors" href="">
+                  My Personal Site/Portfolio - DigitalOcean App Platform 
+                </a>
+              </div>
+              <div class="border-bottom p-3 myAsideButtons">
+                <button type="button" class="btn btn-primary btn-lg btn-block">Submit your project</button>
+                <button type="button" class="btn btn-lg btn-block seePostButton">See all posts</button>
+              </div>
+            </div>
             <div class="card first-section rounded mb-3" style="width: 18rem;">
               <ul class="list-group list-group-news rounded">
                   <h4 class="p-3"><strong> #news</strong></h4>
-                  <a href="#" class="listings1 p-3 border-top">PE offers limited scholarships from 1k to 4k for diversity and financial hardship<span>education</span><br><p class="comments mt-2"> 36 comments</p></a>
-                  <a href="#" class="listings1 p-3 border-top">Learn more than just ´coding´ Learn the entire design process:<span>education</span><br><p class="comments mt-2"> 15 comments</p></a>
-                  <a href="#" class="listings1 p-3 border-top">FCAL - Open source cross plaform calculator for programmers<span>collabs</span><br><p class="comments mt-2"> 12 comments</p></a>
-                  <a href="#" class="listings1 p-3 border-top">QA Platform Engineer<span>jobs</span><br><p class="comments mt-2"> 10 comments</p></a>
-                  <a href="#" class="listings1 p-3 border-top">💡Free Clear Explanations of Fundamental Concepts in Software - in plain english with hand-drawn illustrations<span>education</span><br><p class="comments mt-2">6 comments</p></a>
+                  <a href="#" class="listings1 p-3 border-top text-reset">PE offers limited scholarships from 1k to 4k for diversity and financial hardship<span>education</span><br><p class="comments mt-2"> 36 comments</p></a>
+                  <a href="#" class="listings1 p-3 border-top text-reset">Learn more than just ´coding´ Learn the entire design process:<span>education</span><br><p class="comments mt-2"> 15 comments</p></a>
+                  <a href="#" class="listings1 p-3 border-top text-reset">FCAL - Open source cross plaform calculator for programmers<span>collabs</span><br><p class="comments mt-2"> 12 comments</p></a>
+                  <a href="#" class="listings1 p-3 border-top text-reset">QA Platform Engineer<span>jobs</span><br><p class="comments mt-2"> 10 comments</p></a>
+                  <a href="#" class="listings1 p-3 border-top text-reset">💡Free Clear Explanations of Fundamental Concepts in Software - in plain english with hand-drawn illustrations<span>education</span><br><p class="comments mt-2">6 comments</p></a>
               </ul>
           </div>
           <div class="card mt-5 first-section rounded mb-3" style="width: 18rem;">
               <ul class="list-group list-group-news rounded">
-                  <h4 class="p-3"><strong> #news</strong></h4>
-                  <a href="#" class="listings1 p-3 border-top">PE offers limited scholarships from 1k to 4k for diversity and financial hardship<span>education</span><br><p class="comments mt-2"> 36 comments</p></a>
-                  <a href="#" class="listings1 p-3 border-top">Learn more than just ´coding´ Learn the entire design process:<span>education</span><br><p class="comments mt-2"> 15 comments</p></a>
-                  <a href="#" class="listings1 p-3 border-top">FCAL - Open source cross plaform calculator for programmers<span>collabs</span><br><p class="comments mt-2"> 12 comments</p></a>
-                  <a href="#" class="listings1 p-3 border-top">QA Platform Engineer<span>jobs</span><br><p class="comments mt-2"> 10 comments</p></a>
-                  <a href="#" class="listings1 p-3 border-top">💡Free Clear Explanations of Fundamental Concepts in Software - in plain english with hand-drawn illustrations<span>education</span><br><p class="comments mt-2">6 comments</p></a>
+                  <h4 class="p-3"><strong> #listings</strong></h4>
+                  <a href="#" class="listings1 p-3 border-top text-reset">PE offers limited scholarships from 1k to 4k for diversity and financial hardship<span>education</span><br><p class="comments mt-2"> 36 comments</p></a>
+                  <a href="#" class="listings1 p-3 border-top text-reset">Learn more than just ´coding´ Learn the entire design process:<span>education</span><br><p class="comments mt-2"> 15 comments</p></a>
+                  <a href="#" class="listings1 p-3 border-top text-reset">FCAL - Open source cross plaform calculator for programmers<span>collabs</span><br><p class="comments mt-2"> 12 comments</p></a>
+                  <a href="#" class="listings1 p-3 border-top text-reset">QA Platform Engineer<span>jobs</span><br><p class="comments mt-2"> 10 comments</p></a>
+                  <a href="#" class="listings1 p-3 border-top text-reset">💡Free Clear Explanations of Fundamental Concepts in Software - in plain english with hand-drawn illustrations<span>education</span><br><p class="comments mt-2">6 comments</p></a>
               </ul>
           </div>
           <div class="card mt-5 first-section rounded mb-3" style="width: 18rem;">
               <ul class="list-group list-group-news rounded">
-                  <h4 class="p-3"><strong> #news</strong></h4>
-                  <a href="#" class="listings1 p-3 border-top">PE offers limited scholarships from 1k to 4k for diversity and financial hardship<span>education</span><br><p class="comments mt-2"> 36 comments</p></a>
-                  <a href="#" class="listings1 p-3 border-top">Learn more than just ´coding´ Learn the entire design process:<span>education</span><br><p class="comments mt-2"> 15 comments</p></a>
-                  <a href="#" class="listings1 p-3 border-top">FCAL - Open source cross plaform calculator for programmers<span>collabs</span><br><p class="comments mt-2"> 12 comments</p></a>
-                  <a href="#" class="listings1 p-3 border-top">QA Platform Engineer<span>jobs</span><br><p class="comments mt-2"> 10 comments</p></a>
-                  <a href="#" class="listings1 p-3 border-top">💡Free Clear Explanations of Fundamental Concepts in Software - in plain english with hand-drawn illustrations<span>education</span><br><p class="comments mt-2">6 comments</p></a>
+                  <h4 class="p-3"><strong> #help</strong></h4>
+                  <a href="#" class="listings1 p-3 border-top text-reset">PE offers limited scholarships from 1k to 4k for diversity and financial hardship<span>education</span><br><p class="comments mt-2"> 36 comments</p></a>
+                  <a href="#" class="listings1 p-3 border-top text-reset">Learn more than just ´coding´ Learn the entire design process:<span>education</span><br><p class="comments mt-2"> 15 comments</p></a>
+                  <a href="#" class="listings1 p-3 border-top text-reset">FCAL - Open source cross plaform calculator for programmers<span>collabs</span><br><p class="comments mt-2"> 12 comments</p></a>
+                  <a href="#" class="listings1 p-3 border-top text-reset">QA Platform Engineer<span>jobs</span><br><p class="comments mt-2"> 10 comments</p></a>
+                  <a href="#" class="listings1 p-3 border-top text-reset">💡Free Clear Explanations of Fundamental Concepts in Software - in plain english with hand-drawn illustrations<span>education</span><br><p class="comments mt-2">6 comments</p></a>
               </ul>
           </div>
             
